Removes need for network access when executing unit-tests
Resolves #729